sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:14: error: not found: value condtion
        condtion=true
        ^